    format. Consequence: you can now safely perform page selection on any
    file type with any printer and any spooler, kdeprint will try to convert
    the file to PS.
  * preview dialog: rewrote the code in a cleaner way, avoiding the use
    of a non toplevel main window. Preview dialog looks simpler now. New
    issue: toolbuttons overlap the toolbar border (only for toolbar not
    children of main window).
  * general: made the "Files" page a standard page in KPrinter. Modified
    kprinter's code to add that page -> will be easier to remove it when
    implementing a "--stdin" option.
  * kprinter:
  	. added a "--stdin" option. If this option is set, only printing
	  from stdin is allowed and the "Files" tab is hidden. Can be used in
	  Netscape. If files are given on the command line, this option is
	  forced unset.
	. added a "--nodialog" option for quick print.
	. added the persistent feature (with some code rewrite in kdeprint
	  library)

10/01/2002 Michael Goffioul <goffioul@imec.be>
  * general: added (temporary) workaround for drawing problems in fixed
    toolbars, until a real fix gets implemented:
    	static_cast<QWidget*>(tb)->layout()->setMargin(1);
  * general: started to used new icons provided by Bogdan, for the toolbar
  * general: added KPrinter::autoConfigure(), to automatically configure
    a KPrinter object without the need for a print dialog.

14/01/2002 Michael Goffioul <goffioul@imec.be>
  * slave: made case-insensitive for backward compatibility (old URLs may
    come from history). Now print:/Classes should work OK.
  * CUPS: moved the IPP report to an separate dialog and added the
    possibility to print the result.

15/01/2002 Michael Goffioul <goffioul@imec.be>
  * started the implementation of a new LPR/LPRng plugin: this implementation
    is designed to be modular to provide support for various systems like
    Foomatic, APSFilter, GNUlpr or Printtool(RH).